--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,33 +1,22 @@
 /* header and nav layout */
 header .nav-wrapper {
-  background-color: var(--background-color);
+  background-color: #047aed;
+  color: #fff;
   width: 100%;
   z-index: 2;
   position: fixed;
 }
 
 header nav {
-  box-sizing: border-box;
-  display: grid;
-  grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
+  display: flex;
   align-items: center;
-  gap: 0 2em;
-  margin: auto;
-  max-width: 1264px;
+  justify-content: space-between;
   height: var(--nav-height);
-  padding: 0 1rem;
   font-family: var(--body-font-family);
-}
-
-header nav[aria-expanded="true"] {
-  grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
-    'tools tools' var(--nav-height) / auto 1fr;
-  overflow-y: auto;
-  min-height: 100vh;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 40px;
 }
 
 @media (min-width: 600px) {
@@ -140,9 +129,7 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 
 /* brand */
 header .nav-brand {
-  grid-area: brand;
-  flex-basis: 128px;
-  font-size: var(--heading-font-size-s);
+  font-size: var(--heading-font-size-m);
   font-weight: 700;
   line-height: 1;
 }
@@ -153,13 +140,6 @@ header nav .nav-brand img {
 }
 
 /* sections */
-header nav .nav-sections {
-  grid-area: sections;
-  flex: 1 1 auto;
-  display: none;
-  visibility: hidden;
-  background-color: var(--overlay-color);
-}
 
 header nav[aria-expanded="true"] .nav-sections {
   display: block;
@@ -168,30 +148,25 @@ header nav[aria-expanded="true"] .nav-sections {
 }
 
 header nav .nav-sections ul  {
+  display: flex;
   list-style: none;
-  padding-left: 0;
-  font-size: var(--body-font-size-s);
+  padding: 10px;
+  margin: 0 5px;
+  font-size: var(--body-font-size-xs);
   font-weight: 500;
 }
 
 header nav .nav-sections ul > li {
   font-weight: 700;
+  padding: 8px;
+  border-bottom: 2px solid transparent;
 }
 
-header nav .nav-sections ul > li > ul {
-  margin-top: 0;
-}
-
-header nav .nav-sections ul > li > ul > li {
-  font-weight: 500;
+header nav .nav-sections ul > li:hover {
+  border-bottom: 2px #fff solid;
 }
 
 @media (min-width: 900px) {
-  header nav .nav-sections {
-    display: block;
-    visibility: visible;
-    white-space: nowrap;
-  }
 
   header nav[aria-expanded="true"] .nav-sections {
     align-self: unset;
@@ -225,51 +200,20 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections ul {
     display: flex;
+    list-style: none;
+    padding: 10px;
     gap: 2em;
-    margin: 0;
+    margin: 0 5px;
     font-size: var(--body-font-size-xs);
   }
 
   header nav .nav-sections > ul > li {
-    flex: 0 1 auto;
-    position: relative;
-    font-weight: 500;
+    font-weight: 700;
+    padding: 8px;
+    border-bottom: 2px solid transparent;
   }
 
-  header nav .nav-sections > ul > li > ul {
-    display: none;
-    position: relative;
+  header nav .nav-sections ul > li:hover {
+    border-bottom: 2px #fff solid;
   }
-
-  header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
-    display: block;
-    position: absolute;
-    left: -1em;
-    width: 200px;
-    margin-top: 12px;
-    padding: 1em;
-    background-color: var(--highlight-background-color);
-    white-space: initial;
-  }
-
-  header nav .nav-sections > ul > li > ul::before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--highlight-background-color);
-  }
-
-  header nav .nav-sections > ul > li > ul > li {
-    padding: 8px 0;
-  }
-}
-
-/* tools */
-header nav .nav-tools {
-  grid-area: tools;
 }
