--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,8 @@
  * governing permissions and limitations under the License.
  */
 
+ @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
  :root {
   /* colors */
   --link-color: #035fe6;
@@ -20,9 +22,9 @@
   --text-color: #000;
 
   /* fonts */
-  --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
+  --body-font-family: 'Lato', sans-serif;
   --heading-font-family: var(--body-font-family);
-  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
+  --fixed-font-family: ''Lato', sans-serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -38,7 +40,7 @@
   --heading-font-size-xs: 18px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 70px;
 
 }
 
@@ -53,12 +55,18 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-size: var(--body-font-size-m);
   margin: 0;
-  font-family: var(--body-font-family);
+  font-family: 'Lato', sans-serif;
+  color: #333;
   line-height: 1.6;
-  color: var(--text-color);
   background-color: var(--background-color);
   display: none;
 }
