customised footer block and added animations

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -30,4 +30,11 @@
     flex: 1;
     order: unset;
   }
+
+  .footer .columns > div > div:nth-child(3) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 }
