--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,6 +208,7 @@ main .section.highlight {
   overflow: auto;
   padding: 0 40px;
   background-color: #fff;
+  animation: slideInFromBottom 1s ease-in;
 }
 
 .stats h3 {
@@ -228,6 +229,10 @@ main .section.highlight {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+}
+
+.stats .columns > div > div p:nth-child(3) {
+  color: #1c3fa8;
 }
 
 .cli > div {
@@ -310,4 +315,50 @@ main .section.highlight {
 #supported-languages {
   text-align: center;
   font-size: 2rem;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+@media (max-width: 1000px){
+
+  .showcase-form{
+    width: 340px;
+  }
 }
